--- a/demos/portal/primefaces4-users-portlet/src/main/webapp/WEB-INF/views/users.xhtml
+++ b/demos/portal/primefaces4-users-portlet/src/main/webapp/WEB-INF/views/users.xhtml
@@ -55,12 +55,12 @@
 					</alloy:fieldset>
 				</alloy:column>
 			</alloy:row>
-			<portal:buttonRow>
+			<alloy:buttonRow>
 				<p:commandButton id="pushButtonSubmit" actionListener="#{usersBackingBean.save}" value="#{i18n['submit']}"
 					update=":f1" />
 				<p:commandButton id="pushButtonCancel" actionListener="#{usersBackingBean.cancel}" immediate="true" update=":f1"
 					value="#{i18n['cancel']}" />
-			</portal:buttonRow>
+			</alloy:buttonRow>
 			<hr />
 		</h:panelGroup>
 		<h:panelGroup layout="block" rendered="#{!usersViewBean.formRendered}">
