FACES-2258 Move portal:buttonRow to alloy:buttonRow (fix usage in various portlets)

--- a/demos/portal/icefaces3-directory-portlet/src/main/webapp/WEB-INF/views/directory.xhtml
+++ b/demos/portal/icefaces3-directory-portlet/src/main/webapp/WEB-INF/views/directory.xhtml
@@ -45,11 +45,11 @@
 								</aui-cc:select>
 							</alloy:column>
 						</alloy:row>
-						<portal:buttonRow>
+						<alloy:buttonRow>
 							<aui-cc:button type="submit" label="#{i18n['search']}">
 								<f:actionListener for="click" binding="#{directoryBackingBean.searchActionListener}" />
 							</aui-cc:button>
-						</portal:buttonRow>
+						</alloy:buttonRow>
 					</alloy:fieldset>
 				</icecore:singleSubmit>
 				<div class="separator" />
