FACES-1969 Develop alloy:form component (fixed ajax/non-ajax use-cases now that alloy:commandButton and alloy:commandLink have Ajax-based form submission by default thanks to FACES-2196)

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/form/non-ajax/form.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/form/non-ajax/form.xhtml
@@ -6,7 +6,7 @@
 		<alloy:form>
 			<showcase:example>
 				<alloy:messages globalOnly="true" layout="table" />
-				<alloy:commandButton action="#{formBackingBean.submit}" render="@form"
+				<alloy:commandButton action="#{formBackingBean.submit}" ajax="false"
 					value="#{i18n['submit-and-re-render-form']}" />
 			</showcase:example>
 		</alloy:form>
