--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/form/general/form.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/form/general/form.xhtml
@@ -1,12 +1,13 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" template="/WEB-INF/templates/component-1col-60.xhtml">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase"
+	template="/WEB-INF/templates/component-1col-60.xhtml">
 
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
 				<alloy:messages globalOnly="true" layout="table" />
-				<alloy:commandButton actionListener="#{formBackingBean.submit}" value="#{i18n['submit-and-re-render-page']}" />
+				<alloy:commandButton actionListener="#{formBackingBean.submit}" render="@form"
+					value="#{i18n['submit-and-re-render-page']}" />
 			</showcase:example>
 		</alloy:form>
 	</ui:define>
