--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/datalist/selection/dataList.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/datalist/selection/dataList.xhtml
@@ -16,7 +16,7 @@
 					</alloy:dataItem>
 				</alloy:dataList>
 				<alloy:dialog headerText="#{i18n['more-info']}" clientKey="dialogKey" dismissible="true">
-					<alloy:panelGroup id="dialogContents" styleClass="dialog-content" layout="block">
+					<alloy:panelGroup id="dialogContents" layout="block">
 						<alloy:outputText
 							value="#{dataListModelBean.selectedLiferayBenefit.label}: #{dataListModelBean.selectedLiferayBenefit.description}" />
 					</alloy:panelGroup>
