FACES-1714 Develop Liferay Faces Showcase (clarified usage of "Append New Files to Preview" button).

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputfile/progress/inputFile.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputfile/progress/inputFile.xhtml
@@ -8,7 +8,7 @@
 				<alloy:selectBooleanCheckbox immediate="true" value="#{inputFileModelBean.appendNewFiles}">
 					<f:ajax render="@form" />
 				</alloy:selectBooleanCheckbox>
-				<alloy:outputLabel styleClass="inline-label" value="#{i18n['append-new-files']}" />
+				<alloy:outputLabel styleClass="inline-label" value="#{i18n['append-new-files-to-preview']}" />
 				<alloy:selectBooleanCheckbox immediate="true" value="#{inputFileModelBean.auto}">
 					<f:ajax render="@form" />
 				</alloy:selectBooleanCheckbox>
