FACES-1714 Develop Liferay Faces Showcase (removed redundant styleClass="alloy-output-label" for alloy:outputLabel component tags)

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsourcecode/default-value/inputSourceCode.xhtml
@@ -3,7 +3,7 @@
 
 	<alloy:form>
 		<showcase:example styleClass="editableAceEditor">
-			<alloy:outputLabel styleClass="alloy-output-label" for="inputSourceCode" value="#{i18n['source-code']}" />
+			<alloy:outputLabel for="inputSourceCode" value="#{i18n['source-code']}" />
 			<alloy:inputSourceCode id="inputSourceCode" height="100" mode="xml"
 				rendered="#{showcaseModelBean.selectedComponent.rendered}"
 				required="#{showcaseModelBean.selectedComponent.required}" width="100%"
