--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectstarrating/data-model/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectstarrating/data-model/selectStarRating.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" for="starRating" value="#{i18n['rating']}" />
+				<alloy:outputLabel for="starRating" value="#{i18n['rating']}" />
 				<alloy:selectStarRating value="#{selectStarRatingModelBean.favoriteId}" label="#{i18n['rating']}:">
 					<f:selectItems value="#{selectStarRatingModelBean.liferayBenefits}" var="benefit"
 						itemValue="#{benefit.id}"
