--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectthumbrating/instant-ajax/selectThumbRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectthumbrating/instant-ajax/selectThumbRating.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" for="thumbRating" value="#{i18n['rating']}" />
+				<alloy:outputLabel for="thumbRating" value="#{i18n['rating']}" />
 				<alloy:selectThumbRating id="thumbRating" value="#{selectThumbRatingModelBean.like}">
 					<f:selectItem itemLabel="#{i18n['like']}" itemValue="true" />
 					<f:selectItem itemLabel="#{i18n['dislike']}" itemValue="false" />
