--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanycheckbox/data-model/selectManyCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanycheckbox/data-model/selectManyCheckbox.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectManyCheckbox layout="lineDirection" value="#{selectManyModelBean.favoriteIds}">
 					<f:selectItems value="#{selectManyModelBean.liferayBenefits}" var="benefit"
 						itemValue="#{benefit.id}"
