--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanylistbox/immediate/selectManyListbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanylistbox/immediate/selectManyListbox.xhtml
@@ -6,7 +6,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<alloy:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}" number="1">
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyListbox immediate="true" value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
@@ -32,7 +32,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<alloy:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}" number="2">
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyListbox value="#{selectManyModelBean.favoriteIds}"
 					valueChangeListener="#{selectManyBackingBean.valueChangeListener}">
