--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanymenu/instant-ajax/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectmanymenu/instant-ajax/selectManyMenu.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectManyMenu value="#{selectManyModelBean.favoriteIds}">
 					<f:selectItem itemLabel="Compatible" itemValue="1" />
 					<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
