--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectoneradio/data-model/selectOneRadio.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectoneradio/data-model/selectOneRadio.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
+				<alloy:outputLabel value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:selectOneRadio layout="lineDirection" value="#{selectOneModelBean.favoriteId}">
 					<f:selectItems value="#{selectOneModelBean.liferayBenefits}" var="benefit" itemValue="#{benefit.id}"
 						itemLabel="#{benefit.label}" />
