--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/selectstarrating/default-value/selectStarRating.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:outputLabel styleClass="alloy-output-label" for="starRating" value="#{i18n['rating']}" />
+				<alloy:outputLabel for="starRating" value="#{i18n['rating']}" />
 				<alloy:selectStarRating id="starRating" value="#{selectStarRatingModelBean.benefitId}"
 					label="#{i18n['rating']}:">
 					<f:converter converterId="javax.faces.Long" />
