FACES-2283 Validation use cases for various alloy: input components do not color FacesMessage as red when validation fails

--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputdate/date-pattern/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputdate/date-pattern/inputDate.xhtml
@@ -5,7 +5,10 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputdate-date-pattern-example']}">
-				<alloy:inputDate id="birthday" pattern="EEEE, MMM dd, yyyy" value="#{inputDateModelBean.birthday}" />
+				<alloy:field>
+					<alloy:inputDate id="birthday" pattern="EEEE, MMM dd, yyyy" value="#{inputDateModelBean.birthday}" />
+					<alloy:message for="birthday" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
