--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/validation/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputsecret/validation/inputSecret.xhtml
@@ -9,11 +9,11 @@
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="text" validator="#{inputSecretBackingBean.emailAddressValidator}"
 						validatorMessage="#{i18n['validator-message']}" value="#{inputSecretModelBean.password}" />
-					<alloy:message id="myMessage1" for="text" />
+					<alloy:message for="text" />
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render=":myForm1:outputModel:modelValue myMessage1" value="#{i18n['submit']}" />
+					render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
@@ -30,11 +30,11 @@
 						value="#{inputSecretModelBean.password}">
 						<f:validateRegex pattern=".+[@].+[.].+" />
 					</alloy:inputSecret>
-					<alloy:message id="myMessage2" for="text" />
+					<alloy:message for="text" />
 				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputSecretBackingBean.submit}"
-					render=":myForm2:outputModel:modelValue myMessage2" value="#{i18n['submit']}" />
+					render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
 			<showcase:outputModel id="outputModel">
 				<alloy:outputText id="modelValue" value="#{inputSecretModelBean.password}" />
