--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/min-max/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtime/min-max/inputTime.xhtml
@@ -5,9 +5,11 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example description="#{i18n['valid-time-range']}: 09:00:00 - 17:00:00">
-				<alloy:inputTime id="time" value="#{inputTimeModelBean.time}" showOn="button" maxTime="17:00:00"
-					minTime="09:00:00" pattern="hh:mm a" />
-				<alloy:message for="time" />
+				<alloy:field>
+					<alloy:inputTime id="time" value="#{inputTimeModelBean.time}" showOn="button" maxTime="17:00:00"
+						minTime="09:00:00" pattern="hh:mm a" />
+					<alloy:message for="time" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
