--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtextarea/conversion/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtextarea/conversion/inputTextarea.xhtml
@@ -6,11 +6,13 @@
 		<!-- Example 1: Conversion to a Date using the converter attribute. -->
 		<alloy:form>
 			<showcase:example description="#{i18n['conversion-to-a-date-using-converter-attribute']}" number="1">
-				<alloy:inputTextarea id="textarea" converter="javax.faces.DateTime"
-					converterMessage="#{i18n['converter-message']}"
-					value="#{inputTextModelBean.date}" />
-				<br />
-				<alloy:message for="textarea" />
+				<alloy:field>
+					<alloy:inputTextarea id="textarea" converter="javax.faces.DateTime"
+						converterMessage="#{i18n['converter-message']}"
+						value="#{inputTextModelBean.date}" />
+					<br />
+					<alloy:message for="textarea" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputTextBackingBean.submit}" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
@@ -24,12 +26,14 @@
 		<!-- Example 2: Conversion to a Date using an f:converter child tag. -->
 		<alloy:form>
 			<showcase:example description="#{i18n['conversion-to-a-date-using-f-convertdatetime']}" number="2">
-				<alloy:inputTextarea id="textarea" converterMessage="#{i18n['converter-message']}"
-					value="#{inputTextModelBean.date}">
-					<f:convertDateTime pattern="MM/dd/yyyy" />
-				</alloy:inputTextarea>
-				<br />
-				<alloy:message for="textarea" />
+				<alloy:field>
+					<alloy:inputTextarea id="textarea" converterMessage="#{i18n['converter-message']}"
+						value="#{inputTextModelBean.date}">
+						<f:convertDateTime pattern="MM/dd/yyyy" />
+					</alloy:inputTextarea>
+					<br />
+					<alloy:message for="textarea" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputTextBackingBean.submit}" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
