--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtextarea/validation/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/inputtextarea/validation/inputTextarea.xhtml
@@ -6,9 +6,11 @@
 		<alloy:form>
 			<!-- Example 1: Validating an email address using the validator attribute. -->
 			<showcase:example description="#{i18n['validating-an-email-address-using-validator-attribute']}" number="1">
-				<alloy:inputTextarea id="textarea" validator="#{inputTextBackingBean.emailAddressValidator}"
-					validatorMessage="#{i18n['validator-message']}" value="#{inputTextModelBean.text}" />
-				<alloy:message for="textarea" />
+				<alloy:field>
+					<alloy:inputTextarea id="textarea" validator="#{inputTextBackingBean.emailAddressValidator}"
+						validatorMessage="#{i18n['validator-message']}" value="#{inputTextModelBean.text}" />
+					<alloy:message for="textarea" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputTextBackingBean.submit}" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
@@ -22,11 +24,13 @@
 		<!-- Example 2: Validating an email address using an f:validateRegex child tag. -->
 		<alloy:form>
 			<showcase:example description="#{i18n['validating-an-email-address-using-f-validateregex']}" number="2">
-				<alloy:inputTextarea id="textarea" validatorMessage="#{i18n['validator-message']}"
-					value="#{inputTextModelBean.text}">
-					<f:validateRegex pattern=".+[@].+[.].+" />
-				</alloy:inputTextarea>
-				<alloy:message for="textarea" />
+				<alloy:field>
+					<alloy:inputTextarea id="textarea" validatorMessage="#{i18n['validator-message']}"
+						value="#{inputTextModelBean.text}">
+						<f:validateRegex pattern=".+[@].+[.].+" />
+					</alloy:inputTextarea>
+					<alloy:message for="textarea" />
+				</alloy:field>
 				<hr />
 				<alloy:commandButton action="#{inputTextBackingBean.submit}" render="@form" value="#{i18n['submit']}" />
 			</showcase:example>
