--- a/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/WEB-INF/component/alloy/dialog/general/dialog.xhtml
@@ -1,12 +1,12 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:showcase="http://java.sun.com/jsf/composite/showcase" template="/WEB-INF/templates/component-4col.xhtml">
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:showcase="http://java.sun.com/jsf/composite/showcase"
+	template="/WEB-INF/templates/component-4col.xhtml">
 
 	<ui:define name="col1">
 		<!-- Example 1: Default usage with dismissible="false" -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-1']}" number="1">
-				<alloy:button onclick="Liferay.component('dialogKey1').toggle();" title="#{i18n['button-title']}"
+				<alloy:button onclick="Liferay.component('dialogKey1').toggle();"
 					value="#{i18n['click-here-to-toggle-the-dialog']}" />
 				<alloy:dialog clientKey="dialogKey1" headerText="#{i18n['header-text']}">
 					<alloy:field label="#{i18n['text-field']}">
@@ -48,7 +48,7 @@
 		<!-- Example 3: Blocking usage with modal="true" -->
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-dialog-general-example-3']}" number="3">
-				<alloy:button onclick="Liferay.component('dialogKey3').show();" title="#{i18n['button-title']}"
+				<alloy:button onclick="Liferay.component('dialogKey3').show();"
 					value="#{i18n['click-here-to-show-the-modal-dialog']}" />
 				<alloy:dialog clientKey="dialogKey3" headerText="#{i18n['header-text']}" modal="true">
 					<alloy:field label="#{i18n['text-field']}">
